# quickresolve

./: .bandit  .env  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESCRIPTION.md  EXPLAINABILITY_DOCUMENTATION.md  LICENSE  README.md  REPOSITORY_SETUP.md  SECURITY.md  TOPICS.md  docker-compose.yml  pyproject.toml  quickresolve-cli.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
ai-agent-service/: Dockerfile  README.md  main.py  requirements.txt  test_main.py  test_search.py
chunking-service/: Dockerfile  main.py  requirements.txt
customer_service_data/: ticket_001.md  ticket_002.md  ticket_003.md  ticket_004.md  ticket_005.md  ticket_006.md  ticket_007.md  ticket_008.md  ticket_009.md  ticket_010.md  ticket_011.md  ticket_012.md  ticket_013.md  ticket_014.md  ticket_015.md  ticket_016.md  ticket_017.md  ticket_018.md  ticket_019.md  ticket_020.md  ticket_021.md  ticket_022.md  ticket_023.md  ticket_024.md  ticket_025.md  ticket_026.md  ticket_027.md  ticket_028.md  ticket_029.md  ticket_030.md  ticket_031.md  ticket_032.md  ticket_033.md  ticket_034.md  ticket_035.md  ticket_036.md  ticket_037.md  ticket_038.md  ticket_039.md  ticket_040.md  (+60 more)
data-generator/: Dockerfile  generate_dataset.py
docs/: index-document-pipeline.drawio  task-service.drawio
document-parsing-service/: Dockerfile  main.py  (+1 more)
libs/observability_utils/: __init__.py  pyproject.toml  resource_metrics.py  resource_sampler.py
libs/task_broker_client/: pyproject.toml  task_broker_client.py
libs/task_manager/: pyproject.toml  task_manager.py
(+483 files in other folders)
