[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "observability-utils"
version = "0.1.0"
description = "Shared observability utilities (resource sampler + instrument builder)"
authors = [{name="QuickResolve"}]
requires-python = ">=3.9"
dependencies = []

[tool.setuptools]
package-dir = {"observability_utils" = "."}
packages = ["observability_utils"] 