[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "task-manager"
version = "0.1.0"
description = "QuickResolve Task Manager wrapper for task broker"
authors = [{name="QuickResolve"}]
requires-python = ">=3.9"
dependencies = []

[tool.setuptools]
py-modules = ["task_manager"] 